# xider

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  1  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
docs/: BETA_TEST_PLAN.MD  BUILDING.MD  CMakeLists.txt  CODE_CONVENTIONS.md  COMMIT_CONVENTIONS.md  Doxyfile  Doxyfile.bak  HOW_XIDER_WORKS.md  PROJECT_ARCHITECTURE.MD  TECHNICAL_CHOICES.md
docs/objectives/: COMMUNITY_CONTRIBUTIONS.MD  PERFORMANCE_OPTIMIZATION.MD  TECHNICAL_ARCHITECTURE.MD  TECHNOLOGICAL_WATCH.MD
libraries/evan/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
libraries/evan/docs/: ARCHITECTURE.md  CMakeLists.txt  CODE_CONVENTIONS.md  COMMIT_CONVENTIONS.md  HOW_EVAN_WORKS.md  TECHNICAL_CHOICES.md
libraries/evan/headers/: ADeviceBackend.hpp  ASwapchainContext.hpp  ASwapchainImage.hpp  DeviceContext.hpp  Engine.hpp  EvanPlatform.hpp  Frame.hpp  GPUMaterial.hpp  GPUMesh.hpp  GPUShader.hpp  GPUTexture.hpp  GPUVertex.hpp  IPlatform.hpp  Material.hpp  Mesh.hpp  QueueFamilyIndices.hpp  RenderObject.hpp  Renderer.hpp  RessourceManager.hpp  Scene.hpp  Shader.hpp  Version.hpp  Vertex.hpp
libraries/evan/headers/evan/: ADeviceBackend.hpp  ASwapchainContext.hpp  ASwapchainImage.hpp  DeviceContext.hpp  Engine.hpp  EvanPlatform.hpp  Frame.hpp  GPUMaterial.hpp  GPUMesh.hpp  GPUShader.hpp  GPUTexture.hpp  GPUVertex.hpp  IPlatform.hpp  Material.hpp  Mesh.hpp  RenderObject.hpp  Renderer.hpp  RessourceManager.hpp  Scene.hpp  Shader.hpp  Version.hpp  Vertex.hpp
libraries/evan/headers/glfw/: DesktopBackend.hpp  DesktopSwapchainImage.hpp  IDesktopPlatform.hpp
libraries/evan/headers/openxr/: IXrPlatform.hpp  InteractionProfile.hpp  XrDeviceBackend.hpp  XrManageActions.hpp  XrSwapchainContext.hpp  XrSwapchainImage.hpp
libraries/evan/scripts/: install_ubuntu_dependencies.sh  run-clang-format.sh
libraries/evan/sources/: ADeviceBackend.cpp  ASwapchainContext.cpp  ASwapchainImage.cpp  DeviceContext.cpp  Engine.cpp  Frame.cpp  GPUMaterial.cpp  GPUMesh.cpp  GPUShader.cpp  GPUTexture.cpp  Material.cpp  RenderObject.cpp  Renderer.cpp  RessourceManager.cpp  Scene.cpp  Shader.cpp  Version.cpp
libraries/evan/sources/glfw/: DesktopBackend.cpp  DesktopSwapchainContext.cpp  DesktopSwapchainImage.cpp  IDesktopPlatform.cpp
libraries/evan/sources/openxr/: IXrPlatform.cpp  InteractionProfile.cpp  XrDeviceBackend.cpp  XrManageActions.cpp  XrSwapchainContext.cpp  XrSwapchainImage.cpp
libraries/evan/tests/headers/: test_engine.hpp
libraries/evan/tests/sources/: test_engine.cpp
libraries/guillaume/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
libraries/guillaume/docs/: ARCHITECTURE.md  CMakeLists.txt  HOW_GUILLAUME_WORKS.md  TECHNICAL_CHOICES.md
libraries/guillaume/headers/guillaume/: application.hpp  component_registry.hpp  engine.hpp  event_handler.hpp  local_storage.hpp  metadata.hpp  renderer.hpp  scene.hpp  scene_manager.hpp  scene_manager_filler.hpp  session_storage.hpp  storage.hpp  theme.hpp
libraries/guillaume/sources/: application.cpp  component_registry.cpp  engine.cpp  event_handler.cpp  local_storage.cpp  metadata.cpp  renderer.cpp  scene.cpp  scene_manager.cpp  scene_manager_filler.cpp  session_storage.cpp  storage.cpp  theme.cpp
libraries/guillaume/sources/components/: borders.cpp  bound.cpp  color.cpp  focus.cpp  glyph.cpp  hand_button_interaction.cpp  hand_hover_interaction.cpp  hand_interaction.cpp  hand_pinch_interaction.cpp  hand_poke_interaction.cpp  hand_squeeze_interaction.cpp  hand_thumb_rest_interaction.cpp  hand_thumb_stick_interaction.cpp  hand_trigger_interaction.cpp  interaction.cpp  model.cpp  mouse_button_interaction.cpp  mouse_hover_interaction.cpp  mouse_interaction.cpp  parent.cpp  text.cpp  transform.cpp
libraries/guillaume/sources/ecs/: component.cpp  component_registry.cpp  component_registry_filler.cpp  component_storage.cpp  component_type_id.cpp  entity.cpp  entity_builder.cpp  entity_builder_manager.cpp  entity_builder_manager_filler.cpp  entity_director.cpp  entity_director_manager.cpp  entity_director_manager_filler.cpp  entity_filler.cpp  entity_registry.cpp  entity_registry_container.cpp  level_order_traveler.cpp  parent_entity.cpp  parent_entity_filler.cpp  reverse_level_order_traveler.cpp  system.cpp  system_filler.cpp  system_phase.cpp  system_registry.cpp
libraries/guillaume/sources/entities/: button.cpp  icon.cpp  model.cpp  panel.cpp  text.cpp
libraries/guillaume/sources/event/: event_bus.cpp  event_handler.cpp  event_manager.cpp  event_subscriber.cpp
libraries/guillaume/sources/systems/: focus.cpp  glyph_render.cpp  hand_button.cpp  hand_interaction.cpp  hand_motion.cpp  hand_pinch.cpp  hand_poke.cpp  hand_squeeze.cpp  hand_thumb_rest.cpp  hand_thumb_stick.cpp  hand_trigger.cpp  interaction.cpp  keyboard_control.cpp  measure_glyph.cpp  measure_model.cpp  measure_text.cpp  model_render.cpp  mouse_button.cpp  mouse_interaction.cpp  mouse_motion.cpp  rectangle_render.cpp  text_input.cpp  text_render.cpp
libraries/guillaume/templates/guillaume/: application.tpp  scene.tpp  scene_manager.tpp  scene_manager_filler.tpp  storage.tpp
libraries/guillaume/tests/: CMakeLists.txt
libraries/guillaume/tests/headers/: test_application.hpp  test_ecs.hpp  test_engine.hpp  test_metadata.hpp  test_storage.hpp  (+1 more)
libraries/utility/: CMakeLists.txt  README.md
libraries/utility/docs/: ARCHITECTURE.md  CMakeLists.txt  HOW_GUILLAUME_WORKS.md  TECHNICAL_CHOICES.md
libraries/utility/sources/: cache.cpp  demangle.cpp  ressource_manager.cpp  ressource_provider.cpp  singleton.cpp
libraries/utility/tests/: CMakeLists.txt
libraries/xider/: CMakeLists.txt  README.md
libraries/xider/docs/: ARCHITECTURE.MD  CMakeLists.txt  HOW_XIDER_WORKS.MD
libraries/xider/sources/: engine.cpp  event_handler.cpp  renderer.cpp  xider.cpp
libraries/xider/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/headers/: test_arguments_parser.hpp  test_environments_parser.hpp  test_pet.hpp  test_xider.hpp
tests/sources/: test_arguments_parser.cpp  test_environments_parser.cpp  test_pet.cpp  test_xider.cpp
(+436 files in other folders)
