cmake_minimum_required(VERSION 3.10)
project(xider LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(BUILD_FOR_OPENXR "Build with OpenXR support" OFF)
option(BUILD_FOR_GLFW "Build with GLFW support" OFF)
option(BUILD_FOR_ANDROID "Build for Android" OFF)

option(BUILD_DOCS "Build documentation" OFF)
option(BUILD_TESTING "Build the tests" OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build" FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

if (BUILD_FOR_OPENXR)
    message(STATUS "Building with OpenXR support")

    if(BUILD_FOR_ANDROID)
        add_subdirectory(platforms/openxr/android)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
        message(FATAL_ERROR "OpenXR support for Windows is not implemented yet.")
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        message(FATAL_ERROR "OpenXR support for macOS is not implemented yet.")
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
        add_subdirectory(platforms/openxr/linux)
    else()
        message(FATAL_ERROR "Unsupported platform for OpenXR: ${CMAKE_SYSTEM_NAME}")
    endif()
elseif (BUILD_FOR_GLFW)
    message(STATUS "Building with GLFW support")

    if(BUILD_FOR_ANDROID)
        add_subdirectory(platforms/glfw/android)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
        add_subdirectory(platforms/glfw/linux)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
        add_subdirectory(platforms/glfw/windows)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        add_subdirectory(platforms/glfw/macos)
    else()
        message(FATAL_ERROR "Unsupported platform for GLFW: ${CMAKE_SYSTEM_NAME}")
    endif()
elseif(BUILD_FOR_OPENXR AND BUILD_FOR_GLFW)
    message(FATAL_ERROR "Invalid build configuration: enable only one backend (BUILD_FOR_OPENXR or BUILD_FOR_GLFW).")
else()
    message(FATAL_ERROR "Invalid build configuration: either BUILD_FOR_OPENXR or BUILD_FOR_GLFW must be enabled.")
endif()