cmake_minimum_required(VERSION 3.10)
project(xider LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(BUILD_FOR_OPENXR "Build with OpenXR support" OFF)
option(BUILD_FOR_GLFW "Build with GLFW support" OFF)
option(BUILD_FOR_ANDROID "Build for Android" OFF)
option(BUILD_FOR_LINUX "Build for Linux" OFF)
option(BUILD_FOR_WINDOWS "Build for Windows" OFF)
option(BUILD_FOR_MACOS "Build for macOS" OFF)

option(BUILD_DOCS "Build documentation" OFF)
option(BUILD_TESTING "Build the tests" OFF)

set(_platform_option_count 0)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
set(CMAKE_EXECUTABLE_SUFFIX ".bin")
if(BUILD_FOR_ANDROID)
    math(EXPR _platform_option_count "${_platform_option_count} + 1")
endif()
if(BUILD_FOR_LINUX)
    math(EXPR _platform_option_count "${_platform_option_count} + 1")
endif()
if(BUILD_FOR_WINDOWS)
    math(EXPR _platform_option_count "${_platform_option_count} + 1")
endif()
if(BUILD_FOR_MACOS)
    math(EXPR _platform_option_count "${_platform_option_count} + 1")
endif()

if(NOT _platform_option_count EQUAL 1)
    message(FATAL_ERROR "Invalid platform configuration: enable exactly one platform option (BUILD_FOR_ANDROID, BUILD_FOR_LINUX, BUILD_FOR_WINDOWS, BUILD_FOR_MACOS).")
endif()

set(_backend_option_count 0)
if(BUILD_FOR_OPENXR)
    math(EXPR _backend_option_count "${_backend_option_count} + 1")
endif()
if(BUILD_FOR_GLFW)
    math(EXPR _backend_option_count "${_backend_option_count} + 1")
endif()

if(NOT _backend_option_count EQUAL 1)
    message(FATAL_ERROR "Invalid backend configuration: enable exactly one backend option (BUILD_FOR_OPENXR or BUILD_FOR_GLFW).")
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build" FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

if (BUILD_FOR_OPENXR)
    message(STATUS "Building with OpenXR support")

    if(BUILD_FOR_ANDROID)
        add_subdirectory(platforms/openxr/android)
    elseif(BUILD_FOR_WINDOWS)
        message(FATAL_ERROR "OpenXR support for Windows is not implemented yet.")
    elseif(BUILD_FOR_MACOS)
        message(FATAL_ERROR "OpenXR support for macOS is not implemented yet.")
    elseif(BUILD_FOR_LINUX)
        add_subdirectory(platforms/openxr/linux)
    else()
        message(FATAL_ERROR "Unsupported platform for OpenXR: enable one of BUILD_FOR_ANDROID, BUILD_FOR_LINUX, BUILD_FOR_WINDOWS, or BUILD_FOR_MACOS.")
    endif()
elseif (BUILD_FOR_GLFW)
    message(STATUS "Building with GLFW support")

    if(BUILD_FOR_ANDROID)
        add_subdirectory(platforms/glfw/android)
    elseif(BUILD_FOR_LINUX)
        add_subdirectory(platforms/glfw/linux)
    elseif(BUILD_FOR_WINDOWS)
        add_subdirectory(platforms/glfw/windows)
    elseif(BUILD_FOR_MACOS)
        add_subdirectory(platforms/glfw/macos)
    else()
        message(FATAL_ERROR "Unsupported platform for GLFW: enable one of BUILD_FOR_ANDROID, BUILD_FOR_LINUX, BUILD_FOR_WINDOWS, or BUILD_FOR_MACOS.")
    endif()
else()
    message(FATAL_ERROR "Invalid backend configuration.")
endif()